--- a/public/siotest/index.html
+++ b/public/siotest/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8"/>
-	<title>Queen Web Broker</title>
+	<title>queen bridge sio test</title>
 	<script type="text/javascript" src="/js/socket.io.dev.js"></script>
 	<script type="text/javascript" src="/js/queenbridge.js"></script>
 </head>
