--- a/public/siotest/index.html
+++ b/public/siotest/index.html
@@ -11,14 +11,23 @@
 		<div>
 		<label id="connectStatus" style="color: red">server disconnected</label>
 		<br/><br/>
+		</div>
+		<div>
+		<label>id:</label>
+		<input type="text" size=16 name="" id="myid" value="siotest"/>
+		<button onclick="registerAbonent();return false">reregister</button>
+		<br/><br/>
+		</div>
+		<div>
 		<label id="registerStatus" style="color: black">server unregistered</label>
 		<br/><br/>
 		</div>
 		<div>
 		<label>send to id</label>
-		<select id="abonlist"/>		
-		</div>
+		<select id="abonlist"></select>
+		<button onclick="requestAbonents();return false">refresh</button>
 		<br/><br/>
+		</div>
 		<div>
 		<label>payload</label>
 		<input type="text" size=40 name="" id="payload" value="{'data':'empty'}"/>
@@ -33,9 +42,11 @@
 		// init GUI objects
 		connectStatus = document.getElementById("connectStatus");
 		payload = document.getElementById("payload");
+		myid = document.getElementById("myid");
 		logger = document.getElementById("logger");
 		abonlist = document.getElementById("abonlist");
 		name = 'siotest-' + Math.floor(Math.random() * 1000);
+		// minimal required implementation:
 		qb = new QueenBridge(location.host, {id: name});
 		qb.on('receive', function(data) {
 			logger.value += JSON.stringify(data);
@@ -43,7 +54,8 @@
 		function sendMessage() {
 			qb.send(abonlist.value, payload.value);
 		}
-		
+		// routing layer:
+		// optional:
 		qb.on('connect', function() {
 			connectStatus.style.color = 'green';
 			connectStatus.innerHTML = 'server connected';
@@ -52,9 +64,15 @@
 			connectStatus.style.color = 'red';
 			connectStatus.innerHTML = 'server disconnected';
 		});
+		function registerAbonent() {
+			qb.registerAbonent(myid.value);
+		}
 		qb.on('ping', function(data) {
 			console.log('ping');
 		});		
+		function requestAbonents() {
+			qb.requestAbonents();
+		}		
 		qb.on('abonents', function(data) {
 			while(abonlist.length>0) {
 				abonlist.remove(0);
@@ -65,13 +83,11 @@
 				abonlist.add(option);
 			}			
 		});
-
 		qb.on('register', function(data) {
 			registerStatus.style.color = 'blue';
 			registerStatus.innerHTML = 'server registered as: ' + data.id;
-		});
-
-		
+			myid.value = data.id;
+		});		
 		qb.on('error', function(error) {
 			if (error.type === 'register') {
 				registerStatus.style.color = 'red';
@@ -80,7 +96,6 @@
 			console.log(error.type + ' : ' + error.error);
 		});
 		qb.requestAbonents();
-
 	</script>
 	
 </body>
