--- a/public/asteroids/index.html
+++ b/public/asteroids/index.html
@@ -10,6 +10,8 @@ Source: https://github.com/everblind/js-playground/tree/master/canvas-asteroids
 
 	<link rel="stylesheet" href="css/style.css">
 
+	<script src="/js/socket.io.dev.js"></script>
+	<script src="/js/queenbridge.js"></script>
 	<script src="js/pool.js"></script>
 	<script src="js/vec2d.js"></script>
 	<script src="js/particle.js"></script>
@@ -17,6 +19,7 @@ Source: https://github.com/everblind/js-playground/tree/master/canvas-asteroids
 	<script src="js/asteroid.js"></script>
 	<script src="js/ship.js"></script>
 	<script src="js/canvas-asteroids.js"></script>
+	
 
 </head>
 <body>
